# oxox-lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
headers/: std_utils.h
include/: bitset.h  board.h  game.h
main/game/: board.c  game.c
main/utils/data_structures/: bitset.c
main/utils/functions/: std_utils.c
tests/: tester.c
tests/game/: test_board.c  test_board.h  test_game.c  test_game.h
tests/utils/data_structures/: test_bitset.c  test_bitset.h
